# guahao-game

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  index.html
.github/workflow/: trunk-deploy.yml
.github/workflows/: trunk-deploy.yml
fonts/: font-subset.sh
src/: action.rs  basic.rs  game.rs  gui.rs  lib.rs  main.rs  player.rs
