[package]
name = "guahao-game"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
rand = "0.8"
eframe = { version = "0.29", default-features = false, features = [
    "glow",
    "wayland",
    "x11",
] }
web-time = "1.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen-futures = "0.4"
